--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "scripts": {
     "build": "next build",
+    "cl-build": "contentlayer build",
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint"
@@ -14,28 +15,28 @@
     "@tailwindcss/typography": "0.5.0",
     "big.js": "6.1.1",
     "classnames": "^2.3.1",
-    "contentlayer": "^0.0.33",
+    "contentlayer": "0.3.4",
     "date-fns": "2.28.0",
     "fathom-client": "3.2.0",
     "googleapis": "48.0.0",
     "motion": "^10.5.0",
-    "next": "^12.0.8",
-    "next-auth": "4.1.0",
-    "next-contentlayer": "^0.0.33",
-    "next-themes": "0.0.15",
+    "next": "14.2.4",
+    "next-auth": "4.24.7",
+    "next-contentlayer": "0.3.4",
+    "next-themes": "0.3.0",
     "preact": "10.5.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "1.1.2",
+    "react": "18.3.0",
+    "react-dom": "18.3.0",
+    "swr": "2.2.5",
     "tailwindcss": "3.0.13",
     "unsplash-js": "6.3.0",
     "use-delayed-render": "^0.0.7"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
+    "@types/react": "18.3.0",
     "autoprefixer": "10.4.2",
     "eslint": "8.6.0",
-    "eslint-config-next": "^12.0.8",
+    "eslint-config-next": "14.2.5",
     "globby": "12.0.2",
     "postcss": "^8.4.5",
     "prettier": "2.5.1",
@@ -48,7 +49,7 @@
     "rehype-slug": "5.0.1",
     "remark-gfm": "^3.0.1",
     "rss": "1.2.2",
-    "typescript": "^4.5.4"
+    "typescript": "5.5.3"
   },
   "resolutions": {
     "preact": "10.5.15"
