--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": "true",
   "description": "",
   "scripts": {
-    "build": "contentlayer build && next build",
+    "build": "prisma generate && contentlayer build && next build",
     "cl-build": "contentlayer build",
     "dev": "next dev",
     "start": "next start",
